[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Images/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Body.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/WorldThreshold.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player/ThresholdFinder.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/Main.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Player/Sprite.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sounds/SFX/Death.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 12, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 36, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 60, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 84, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 96, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 108, 24, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 12, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 24, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 36, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 12, 12, 12 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 12, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 24, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 36, 36, 12, 12 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 12, 12 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 12, 48, 12, 12 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 24, 48, 12, 12 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 36, 48, 12, 12 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "world_switch",
"speed": 20.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "air",
"speed": 10.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 4.5, 5.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 4.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 3.5, 1.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 10, 3.5 )

[node name="Player" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Body"]
visible = false
frames = SubResource( 15 )
animation = "run"
frame = 1
playing = true
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape2D" parent="Body"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 16 )

[node name="ThresholdFinder" type="Area2D" parent="Body"]
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape2D" parent="Body/ThresholdFinder"]
position = Vector2( 4, 0.5 )
shape = SubResource( 18 )

[node name="CollisionShapeBot" type="CollisionShape2D" parent="Body/ThresholdFinder"]
position = Vector2( 8, 4 )
shape = SubResource( 29 )
__meta__ = {
"_editor_description_": "basically this makes breaking blocks a lot smoother, bottom piece"
}

[node name="CollisionShapeTop" type="CollisionShape2D" parent="Body/ThresholdFinder"]
position = Vector2( 8, -3 )
shape = SubResource( 29 )
__meta__ = {
"_editor_description_": "basically this makes breaking blocks a lot smoother, top piece"
}

[node name="InvincibilityTimer" type="Timer" parent="Body"]

[node name="DeathSound" type="AudioStreamPlayer" parent="Body"]
stream = ExtResource( 7 )

[node name="HeavenThreshold" type="Area2D" parent="."]
position = Vector2( 0, -30 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="HeavenThreshold"]
shape = SubResource( 17 )

[node name="HellThreshold" type="Area2D" parent="."]
position = Vector2( 0, 30 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape2D" parent="HellThreshold"]
shape = SubResource( 17 )

[connection signal="timeout" from="Body/InvincibilityTimer" to="Body" method="_on_InvincibilityTimer_timeout"]
[connection signal="area_entered" from="HeavenThreshold" to="Body/ThresholdFinder" method="_on_HeavenThreshold_area_entered"]
[connection signal="area_entered" from="HellThreshold" to="Body/ThresholdFinder" method="_on_HellThreshold_area_entered"]
